# multilanguage-sdk

./: go.mod
.containifyci/: containifyci.go  go.mod  go.sum
.github/: dependabot.yaml
.github/workflows/: artifact.yaml  engine-ci.yml  publish.yml  pull-request.yml  release.yml
go-app/: .gitignore  go.mod  go.sum  main.go
rust-core/: Cargo.toml  Makefile  build.rs  cbindgen.toml  post_build.rs  uniffi.toml
rust-core/go/: Makefile  go.mod  librust_core.dylib  main.go
rust-core/go/pkg/api/: api_darwin.go  api_linux.go
rust-core/go/pkg/lib/: bindings.h  lib.go
rust-core/go/pkg/rust_core/: rust_core.c  rust_core.go  rust_core.h
rust-core/python/: librust_core.dylib  main.py  rust_core.py
rust-core/src/: lib.rs  rust-core.udl
