[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
# uniffi = { version = "0.28", features = [ "build", "cli" ] }
reqwest = { version = "0.13", features = ["blocking"] }
# tokio = { version = "1", features = ["full"] }
ffi-support = "0.4.4"
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
cbindgen = { version = "0.29.2", features = ["clap"] }
#uniffi = { version = "0.28", features = [ "build", "cli" ] }

#[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
#name = "uniffi-bindgen"
#path = "uniffi-bindgen.rs"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
# pre-build = [
#     "dpkg --add-architecture $CROSS_DEB_ARCH",
#     "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
# ]

[workspace.metadata.cross.target.armv7-unknown-linux-gnueabi]

[workspace.metadata.cross.target.aarch64-apple-darwin]

[workspace.metadata.cross.target.x86_64-apple-darwin]

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"
name = "rust_core_x86_64_linux_gnu"


[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-unknown-linux-gnu-gcc"

[target.aarch64-unknown-linux-musl]

[target.x86_64-apple-darwin]

[target.aarch64-apple-darwin]
